-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: 8.3.0-rc0
-
Component/s: Testing Infrastructure, Write Ops
-
None
-
Catalog and Routing
-
Fully Compatible
-
ALL
-
CAR Team 2025-08-18, CAR Team 2025-09-01
-
🟩 Routing and Topology
-
None
-
None
-
None
-
None
-
None
-
None
Running the following command:
db.system.buckets.ts.findAndModify({query: {x: false}, update: {$set: {x: true}}});
On a v8.3 sharded cluster where "ts" is a non-existing or non-tracked legacy timeseries collection, triggers a tripwire assertion:
findAndModifyFailed failed: {
"ok" : 0,
"errmsg" : "Expected routing table to be initialized",
"code" : 9949201,
"codeName" : "Location9949201",
[...]
The issue is that the new uassert introduced by SERVER-106730 may call ChunkManager::isNewTimeseriesWithoutView without having a routing table. This usage triggers a tripwire assertion since the router doesn't have enough information to know the kind of collection is at that namespace.
- is caused by
-
SERVER-106730 Make findAndModify commands treat viewless time-series collections as time-series collections
-
- Closed
-
- related to
-
SERVER-109519 Remove temporary *_legacy_timeseries_no_rawdata test suites
-
- Backlog
-
-
SERVER-108332 Review usages of NSS::isTimeseriesBucketsCollection for viewless timeseries
-
- Closed
-