SERVER-109280 findAndModify on non-tracked system.buckets collection on a sharded cluster triggers tripwire assert (#40246)

GitOrigin-RevId: 7c763d8fdd6c462990a2c03a543333da8eaf1bf2