jstests/core/timeseries/query/timeseries_raw_data_getmore.js
@@ -2,13 +2,14 @@
  * Tests getMore on cursors opened by reads that used rawData.
  *
  * @tags: [
- *   requires_fcv_82,
  *   requires_timeseries,
  *   requires_getmore,
  *   # This test relies on query commands returning specific batch-sized responses.
  *   assumes_no_implicit_cursor_exhaustion,
  * ]
  */
+
+import {getTimeseriesCollForRawOps, kRawOperationSpec} from "jstests/core/libs/raw_operation_utils.js";
 
 const coll = db[jsTestName()];
 
@@ -30,21 +31,27 @@ assert.commandWorked(
     ]),
 );
 
-const expectedDocs = coll.find({"control.count": 2}).rawData().sort({$natural: 1}).toArray();
-const aggCur = coll.aggregate([{$match: {"control.count": 2}}], {
+const expectedDocs = getTimeseriesCollForRawOps(coll)
+    .find({"control.count": 2})
+    .rawData()
+    .sort({$natural: 1})
+    .toArray();
+const aggCur = getTimeseriesCollForRawOps(coll).aggregate([{$match: {"control.count": 2}}], {
     cursor: {batchSize: 0},
-    rawData: true,
+    ...kRawOperationSpec,
     hint: {$natural: 1},
 });
 
 let getMoreRes = assert.commandWorked(
-    db.runCommand({getMore: aggCur.getId(), collection: coll.getName(), batchSize: 1}),
+    db.runCommand({getMore: aggCur.getId(), collection: getTimeseriesCollForRawOps(coll).getName(), batchSize: 1}),
 );
 assert.eq(1, getMoreRes.cursor.nextBatch.length, tojson(getMoreRes));
 assert.eq(expectedDocs[0], getMoreRes.cursor.nextBatch[0]);
 assert.neq(0, getMoreRes.cursor.id, tojson(getMoreRes));
 
-getMoreRes = assert.commandWorked(db.runCommand({getMore: getMoreRes.cursor.id, collection: coll.getName()}));
+getMoreRes = assert.commandWorked(
+    db.runCommand({getMore: getMoreRes.cursor.id, collection: getTimeseriesCollForRawOps(coll).getName()}),
+);
 assert.eq(2, getMoreRes.cursor.nextBatch.length, tojson(getMoreRes));
 assert.eq(expectedDocs[1], getMoreRes.cursor.nextBatch[0]);
 assert.eq(expectedDocs[2], getMoreRes.cursor.nextBatch[1]);
