jstests/core/timeseries/query/timeseries_raw_data_queries.js
@@ -2,7 +2,6 @@
  * Performs basic read operations on the buckets of a time-series collection using rawData.
  * @tags: [
  *   requires_timeseries,
- *   requires_fcv_82,
  *   does_not_support_transactions,
  *   # TODO (SERVER-104682): Remove this exclusion tag once the bug is fixed
  *   # Explain on $indexStats aggregation with rawData on mongos
@@ -10,6 +9,12 @@
  *   known_query_shape_computation_problem,
  * ]
  */
+
+import {
+    getTimeseriesCollForRawOps,
+    kIsRawOperationSupported,
+    kRawOperationSpec,
+} from "jstests/core/libs/raw_operation_utils.js";
 
 // Set up some testing buckets to work with
 const timeField = "t";
@@ -46,40 +51,52 @@ function crudTest(fn, addStartingMeasurements = true) {
 
 // aggregate()
 crudTest(() => {
-    const agg = coll.aggregate([{$match: {"control.count": 2}}], {rawData: true});
+    const agg = getTimeseriesCollForRawOps(coll).aggregate([{$match: {"control.count": 2}}], kRawOperationSpec);
     assert.eq(agg.toArray().length, 1);
 
-    assert.eq(coll.aggregate([{$indexStats: {}}, {$match: {name: "m_1_t_1"}}], {rawData: true}).toArray()[0].key, {
-        meta: 1,
-        "control.min.t": 1,
-        "control.max.t": 1,
-    });
+    assert.eq(
+        getTimeseriesCollForRawOps(coll)
+            .aggregate([{$indexStats: {}}, {$match: {name: "m_1_t_1"}}], kRawOperationSpec)
+            .toArray()[0].key,
+        {
+            meta: 1,
+            "control.min.t": 1,
+            "control.max.t": 1,
+        },
+    );
 });
 
 // count()
 crudTest(() => {
-    assert.eq(coll.count({"control.count": 2}, {rawData: true}), 1);
+    assert.eq(getTimeseriesCollForRawOps(coll).count({"control.count": 2}, kRawOperationSpec), 1);
 });
 
 // countDocuments()
 crudTest(() => {
-    assert.eq(coll.countDocuments({"control.count": 2}, {rawData: true}), 1);
+    assert.eq(getTimeseriesCollForRawOps(coll).countDocuments({"control.count": 2}, kRawOperationSpec), 1);
 });
 
 // distinct()
 crudTest(() => {
-    assert.eq(coll.distinct("control.count", {}, {rawData: true}).sort(), [1, 2]);
+    assert.eq(getTimeseriesCollForRawOps(coll).distinct("control.count", {}, kRawOperationSpec).sort(), [1, 2]);
 });
 
 // find()
 crudTest(() => {
-    assert.eq(coll.find().rawData().length(), 2);
-    assert.eq(coll.find({"control.count": 2}).rawData().length(), 1);
+    assert.eq(getTimeseriesCollForRawOps(coll).find().rawData().length(), 2);
+    assert.eq(getTimeseriesCollForRawOps(coll).find({"control.count": 2}).rawData().length(), 1);
 });
 
 // findOne()
 crudTest(() => {
-    const retrievedBucket = coll.findOne({"control.count": 2}, null, null, null, null, true /* rawData */);
+    const retrievedBucket = getTimeseriesCollForRawOps(coll).findOne(
+        {"control.count": 2},
+        null,
+        null,
+        null,
+        null,
+        kIsRawOperationSupported /* rawData */,
+    );
     assert.eq(retrievedBucket.control.count, 2);
     assert.eq(retrievedBucket.meta, "1");
 });
